# meme-lang

./: .gitignore  Cargo.toml  Readme.md  setup.cfg
meme/: __init__.py  __main__.py  meme.py
meme-lang/meme_lang.egg-info/: PKG-INFO
meme/meme_lang.egg-info/: PKG-INFO  SOURCES.txt
meme_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
memetic/: Cargo.toml
tests/: t.py  x.meme
