[metadata]
name = meme-lang
version = 1.0.0
author = LighghtEeloo
author_email = litiaeeloo@gmail.com
description = Package for meme language
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/LighghtEeloo/meme-lang
project_urls =
    Bug Tracker = https://github.com/LighghtEeloo/meme-lang/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = meme
packages = find:
python_requires = >=3.6

[options.packages.find]
where = meme
