[metadata]
name = meme-lang
version = 1.0.2
author = LighghtEeloo
author_email = litiaeeloo@gmail.com
description = Package for meme language
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/LighghtEeloo/meme-lang
project_urls =
    Bug Tracker = https://github.com/LighghtEeloo/meme-lang/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = meme
python_requires = >=3.6
install_requires =
    click

[options.entry_points]
console_scripts =
    executable-name = meme.__main__:main